--- a/app/src/main/res/layout/activity_register_usuario.xml
+++ b/app/src/main/res/layout/activity_register_usuario.xml
@@ -8,7 +8,7 @@
 
     <!-- Header aligned to bottom -->
     <RelativeLayout
-        android:id="@+id/header1"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -29,16 +29,14 @@
 
     <!-- Header aligned to top login -->
     <RelativeLayout
-        android:layout_below="@+id/header1"
+        android:id="@+id/rl_login"
+        android:layout_below="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:gravity="center" >
 
         <ImageView
-
-            android:layout_marginTop="80dp"
-
+            android:layout_marginTop="10dp"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
@@ -48,11 +46,13 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginTop="240dp"
-        android:layout_marginBottom="40dp"
-        android:id="@+id/header"
+        android:layout_marginTop="10dp"
+
+        android:id="@+id/rl_body_1"
+        android:layout_below="@+id/rl_login"
+        android:layout_above="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
 
         <!--Nombre-->
         <LinearLayout
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
