--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,7 +81,25 @@
                 android:textColor="#0089BA"
                 />
 
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <ProgressBar
+                    android:paddingVertical="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/progress_home_categoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
             <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
                 android:id="@+id/rvCategoria"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
