--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#EEEEEE</color>
+    <color name="blue">#2196F3</color>
+    <color name="yellow">#FFC107</color>
+    <color name="yellow_300">#FFD54F</color>
+    <color name="black_semi_transparent">#B2000000</color>
 </resources>
