--- a/app/src/main/res/layout/activity_buscar_producto.xml
+++ b/app/src/main/res/layout/activity_buscar_producto.xml
@@ -10,19 +10,14 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-          >
-
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingTop="15dp"
-
-            >
+            android:paddingTop="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,20 +34,23 @@
                     android:tint="#0089BA"
                     app:srcCompat="@drawable/ic_buscar" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/search_product"
+                    android:layout_width="294dp"
                     android:layout_height="45dp"
                     android:layout_gravity="center_vertical"
-                    android:gravity="center"
+                    android:background="@null"
+                    android:gravity="center|left"
+                    android:hint="Buscar"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Buscar"
-                    android:textAlignment="center"
                     android:textColor="#797D7F" />
+
             </LinearLayout>
 
         </LinearLayout>
-
 
     </RelativeLayout>
 
@@ -61,8 +59,7 @@
         android:id="@+id/body_one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/header"
-        >
+        android:layout_below="@+id/header">
 
 
         <!-- Items -->
@@ -186,31 +183,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/body_one"
-        android:background="#E5E7E9"
-        >
+        android:background="#E5E7E9">
 
         <!-- ordernar -->
         <RelativeLayout
             android:id="@+id/mnu_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            >
+            android:layout_alignParentLeft="true">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="30dp"
-                    app:srcCompat="@drawable/ic_ordenar_lista_2"
-                    android:tint="#0089BA"
                     android:backgroundTint="#E5E7E9"
-
-                    />
+                    android:tint="#0089BA"
+                    app:srcCompat="@drawable/ic_ordenar_lista_2" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -230,54 +224,49 @@
             android:id="@+id/mnu_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            >
+            android:layout_alignParentRight="true">
 
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="30dp"
-                app:srcCompat="@drawable/ic_filtro"
-                android:tint="#0089BA"
                 android:backgroundTint="#E5E7E9"
-                />
+                android:tint="#0089BA"
+                app:srcCompat="@drawable/ic_filtro" />
 
         </RelativeLayout>
 
-
-
     </RelativeLayout>
-
 
     <!-- ITEMS -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/body_two"
         android:layout_above="@+id/footer"
-        >
+        android:layout_below="@+id/body_two">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
-                android:overScrollMode="never"
-                ></android.support.v7.widget.RecyclerView>
-
-
+                android:orientation="horizontal"
+                android:overScrollMode="never" />
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/progress_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
     </RelativeLayout>
-
 
 
     <!-- FOOTER MENU-->
@@ -286,75 +275,74 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center" >
+        android:gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
             android:background="#0089BA"
-            >
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <!--INICIO-->
             <Button
-                android:textAllCaps="false"
-                android:layout_weight="0.5"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:background="#0089BA"
                 android:drawableTop="@drawable/ic_home"
+                android:drawableTint="#80DEEA"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:drawableTint="#80DEEA"
                 android:text="Incio"
-                android:textColor="#80DEEA"
-                android:layout_width="fill_parent" />
+                android:textAllCaps="false"
+                android:textColor="#80DEEA" />
 
 
             <!--BUSCAR-->
             <Button
-                android:textAllCaps="false"
-                android:layout_weight="0.5"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:background="#0089BA"
                 android:drawableTop="@drawable/ic_buscar"
+                android:drawableTint="#fff "
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:drawableTint="#fff "
                 android:text="Buscar"
-                android:textColor="#fff"
-                android:layout_width="fill_parent" />
+                android:textAllCaps="false"
+                android:textColor="#fff" />
 
 
             <!--CARRITO-->
             <Button
-                android:textAllCaps="false"
-                android:layout_weight="0.5"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:background="#0089BA"
                 android:drawableTop="@drawable/ic_carito"
+                android:drawableTint="#80DEEA"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:drawableTint="#80DEEA"
                 android:text="Carrito"
-                android:textColor="#80DEEA"
-                android:layout_width="fill_parent" />
+                android:textAllCaps="false"
+                android:textColor="#80DEEA" />
 
 
             <!--PERFIL-->
             <Button
-                android:textAllCaps="false"
-                android:layout_weight="0.5"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:background="#0089BA"
                 android:drawableTop="@drawable/ic_usuario"
+                android:drawableTint="#80DEEA"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:drawableTint="#80DEEA"
                 android:text="Perfil"
-                android:textColor="#80DEEA"
-                android:layout_width="fill_parent" />
+                android:textAllCaps="false"
+                android:textColor="#80DEEA" />
 
 
         </LinearLayout>
