se añade Staggered GridView en buscar producto

--- a/app/src/main/res/layout/activity_buscar_producto.xml
+++ b/app/src/main/res/layout/activity_buscar_producto.xml
@@ -252,12 +252,12 @@
             android:gravity="center_vertical">
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_products"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="10dp"
-                android:orientation="horizontal"
-                android:overScrollMode="never" />
+                android:orientation="vertical" />
         </LinearLayout>
 
         <ProgressBar
