--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="40dp"
     android:layout_marginTop="20dp"
-    >
+    android:layout_marginRight="40dp">
+
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <ImageView
-            android:layout_centerHorizontal="true"
             android:id="@+id/img_categoria"
-            android:layout_gravity="center"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:textSize="30dp" />
-        <TextView
             android:layout_centerHorizontal="true"
-            android:id="@+id/tv_nombre_categoria"
             android:layout_gravity="center"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/tv_nombre_categoria"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/img_categoria"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
             android:paddingTop="5dp"
             android:text="Alimentos"
             android:textColor="#797D7F"
-            android:textSize="12dp"
-            android:layout_below="@+id/img_categoria"
-            />
+            android:textSize="12dp" />
 
     </RelativeLayout>
 
