--- a/app/src/main/res/layout/item_detalle_pedido.xml
+++ b/app/src/main/res/layout/item_detalle_pedido.xml
@@ -45,7 +45,7 @@
 
 
             <TextView
-                android:id="@+id/tvDescripcion"
+                android:id="@+id/tvDescription"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:textSize="12sp"
@@ -62,7 +62,7 @@
                 android:textSize="10sp"
                 android:text="Cantidad: 1"
                 android:layout_toRightOf="@id/imageView"
-                android:layout_below="@+id/tvDescripcion"
+                android:layout_below="@+id/tvDescription"
                 android:gravity="center_vertical"
                 />
 
@@ -77,7 +77,7 @@
                 android:text="S/120.00"
                 android:gravity="center_vertical"
                 android:layout_alignParentRight="true"
-                android:layout_below="@id/tvDescripcion"
+                android:layout_below="@id/tvDescription"
                 />
 
 
